# rested

./: .gitignore  Cargo.toml  README.md  bacon.toml  build.sh  package-lock.json  package.json  pnpm-lock.yaml  test_script.rd
.github/workflows/: Release.yml  Test.yml
benches/: .vars.bench.rd.json  errors.rs  interpreter.rs  lexer.rs  parser.rs  vars.bench.rd.json
error_meta/: Cargo.toml
error_meta/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: attributes.rs  environment.rs  error.rs  ir.rs  lib.rs  runtime.rs  ureq_runner.rs
interpreter/tests/: interpreter.rs
interpreter/tests/snapshots/: interpreter__name_attribute_requires_value.snap  interpreter__prevents_duplicate_attributes-2.snap  interpreter__prevents_duplicate_attributes.snap
language_server/: Cargo.toml
language_server/src/: completions.rs  lib.rs
lexer/: Cargo.toml
lexer/src/: display.rs  lib.rs  locations.rs
lexer/src/snapshots/: lexer__tests__lex_call_expression.snap  lexer__tests__lex_get_url.snap  lexer__tests__lex_get_url_over_many_lines-2.snap  lexer__tests__lex_get_url_over_many_lines.snap  lexer__tests__lex_get_url_with_header.snap  lexer__tests__lex_get_url_with_header_and_body.snap  lexer__tests__lex_string_literals-2.snap  lexer__tests__lex_string_literals-3.snap  lexer__tests__lex_string_literals-4.snap  lexer__tests__lex_string_literals-5.snap  lexer__tests__lex_string_literals-6.snap  lexer__tests__lex_string_literals.snap  lexer__tests__lex_template_literals-2.snap  lexer__tests__lex_template_literals.snap
lexer/tests/: lexer.rs
lexer/tests/snapshots/: lexer__lex_bools.snap  lexer__lex_call_expression.snap  lexer__lex_get_url.snap  lexer__lex_get_url_over_many_lines-2.snap  lexer__lex_get_url_over_many_lines.snap  lexer__lex_get_url_with_header.snap  lexer__lex_get_url_with_header_and_body.snap  lexer__lex_put_patch_delete.snap  lexer__lex_string_literals-2.snap  lexer__lex_string_literals-3.snap  lexer__lex_string_literals-4.snap  lexer__lex_string_literals-5.snap  lexer__lex_string_literals-6.snap  lexer__lex_string_literals.snap  lexer__lex_template_literals-2.snap  lexer__lex_template_literals.snap  lexer__tests__lex_put_patch_delete.snap
npm/: getBinary.js
parser/: Cargo.toml
parser/src/: ast.rs  ast_queries.rs  ast_span.rs  ast_stringify.rs  error.rs  lib.rs
parser/src/snapshots/: parser__error__tests__expected_name_after_header_keyword.snap  parser__error__tests__expected_url_after_method-2.snap  parser__error__tests__expected_url_after_method.snap  parser__error__tests__expecting_commas_between_certain_json_items-2.snap  parser__error__tests__expecting_commas_between_certain_json_items.snap  parser__error__tests__expecting_identifier_or_string_lit_after_header_name.snap  parser__error__tests__expecting_request_or_other_attribute_after_attributes.snap
parser/tests/: parser.rs
parser/tests/snapshots/: parser__it_works.snap  parser__parse_attributes.snap  parser__parse_attributes_ignoring_comments_after_them.snap  parser__parse_env_call_expression.snap  parser__parse_get_urls.snap  parser__parse_get_with_headers.snap  parser__parse_global_constant_setting.snap  parser__parse_json_object.snap  parser__parse_json_object_allowing_trailing_comma.snap  parser__parse_json_object_deep.snap  parser__parse_json_object_ignoring_comments.snap  parser__parse_json_object_with_array_keys.snap  parser__parse_post_url-2.snap  parser__parse_post_url.snap  parser__parse_post_with_headers.snap  parser__parse_post_with_headers_and_body.snap  parser__parse_post_with_headers_and_body_as_json_string.snap  parser__parse_template_string_literal.snap
playtest/: package.json  script.rd  server.js
src/: array.rs  ast.rs  config.rs  error.rs  fmt.rs  interpretor.rs  lexer.rs  lib.rs  main.rs  parser.rs  runtime.rs
src/cli/: config.rs  format.rs  mod.rs  run.rs  scratch.rs  snaphot.rs  snapshot.rs
src/error/: interpreting.rs  mod.rs  parsing.rs
src/error_meta/: mod.rs
src/interpreter/: attributes.rs  builtin.rs  environment.rs  error.rs  eval.rs  ir.rs  mod.rs  runner.rs  ureq_runner.rs  value.rs
src/interpretor/: error.rs  mod.rs
src/language_server/: completions.rs  hover.rs  mod.rs  position.rs  runner.rs  warnings.rs
src/lexer/: display.rs  locations.rs  mod.rs
src/parser/: ast.rs  ast_errors.rs  ast_queries.rs  ast_span.rs  ast_visit.rs  error.rs  error_recovering.rs  mod.rs
src/snapshots/: rested__ast__tests__it_works.snap
test/: pnpm-lock.yaml  script.rd  server.ts  text.txt
tests/: formatter.rs  interpreter.rs  lexer.rs  parser.rs
tests/files/: test_data.json
tests/snapshots/: formatter__it_echos_line_comments-2.snap  formatter__it_echos_line_comments-3.snap  formatter__it_echos_line_comments.snap  formatter__it_formats_json_object.snap  formatter__it_formats_object_literals_with_line_comments-2.snap  formatter__it_formats_object_literals_with_line_comments.snap  formatter__it_formats_template_strings-2.snap  formatter__it_formats_template_strings.snap  formatter__it_stacks_consecutive_let_statements.snap  formatter__it_works-2.snap  formatter__it_works-3.snap  formatter__it_works.snap  interpreter__name_attribute_requires_value.snap  interpreter__prevents_duplicate_attributes-2.snap  interpreter__prevents_duplicate_attributes.snap  lexer__asdf.snap  (+66 more)
(+19 files in other folders)
