[package]
name = "rested"
version = "0.4.1"
description = "Language/Interpreter for easily defining and running requests to an http server."
homepage = "https://github.com/Gnarus-G/rested"
repository = "https://github.com/Gnarus-G/rested"
edition = "2021"
license = "GPL-2.0"

[[bin]]
name = "rstd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["io-std", "rt-multi-thread"] }
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.1"
colored = "2.0.0"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
ureq = "2.6.2"
tower-lsp = "0.20.0"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }

[dev-dependencies]
mockito = "1.0.2"
insta = { version = "1.29.0", features = ["ron"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
