[package]
name = "rested"
version = "0.10.0"
description = "Language/Interpreter for easily defining and running requests to an http server."
homepage = "https://github.com/Gnarus-G/rested"
repository = "https://github.com/Gnarus-G/rested"
edition = "2021"
license = "GPL-2.0"

[[bin]]
name = "rstd"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["io-std", "rt-multi-thread"] }
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.1"
colored = "2.0.0"
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
ureq = "2.6.2"
tower-lsp = "0.20.0"
confy = { version = "0.5.1", features = ["ron_conf"], default-features = false }
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
enum-tags = "0.1.0"
enum-tags-macros = { version = "0.1.0" }
enum-tags-traits = { version = "0.1.0" }
skim = "0.10.4"

[dev-dependencies]
mockito = "1.0.2"
insta = { version = "1.29.0", features = ["ron"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "errors"
harness = false

[[bench]]
name = "interpreter"
harness = false

[profile.dev.package.insta]
opt-level = 3
