[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
ureq = "2.6.2"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
error_meta = { path = "../error_meta" }

[dev-dependencies]
mockito = "1.0.2"
