[package]
name = "language_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["io-std", "rt-multi-thread"] }
tower-lsp = "0.19.0"
lexer = { path = "../lexer" }
parser = { path = "../parser" }
